src/test/ui/nll/issue-52113.stderr
error: lifetime may not live long enough
  --> $DIR/issue-52113.rs:34:5
   |
LL | fn produce_err<'a, 'b: 'a>(data: &'b mut Vec<&'b u32>, value: &'a u32) -> impl Bazinga + 'b {
   |                --  -- lifetime `'b` defined here
   |                |
   |                lifetime `'a` defined here
...
LL |     x
   |     ^ returning this value requires that `'a` must outlive `'b`

help: the following changes may resolve your lifetime errors
   |
   = help: add bound `'a: 'b`

error: aborting due to previous error

